# lym-00392

./: pyproject.toml
mypdf/: __init__.py  __main__.py  cli.py  cmap.py  content_stream.py  extractor.py  indexer.py  manipulator.py  objects.py  parser.py  writer.py
tests/: acceptance_test.py  generate_real_pdfs.py  generate_test_pdfs.py
