[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mypdf"
version = "0.1.0"
description = "A command-line PDF text extraction and search tool"
requires-python = ">=3.8"
authors = [
    {name = "mypdf"}
]
dependencies = []

[project.scripts]
mypdf = "mypdf.cli:main"

[tool.setuptools.packages.find]
include = ["mypdf*"]
